test/tests/errors/error-class-func-body-invalid2.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        private func a(): int {
            "test"
        }
    }
}